Audio file loading finished, support for it in the Inspector.