@@ -9,6 +9,7 @@ import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -18,7 +19,7 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 public class EditorUtil {
-    private static final List<LogicBehaviour> importedClasses = new ArrayList<>();
+    private static final List<LogicBehaviour> importedClasses = new ArrayList<LogicBehaviour>();
     private static int i;
 
     public static void ImportClass(String path) {
@@ -39,7 +40,7 @@ public class EditorUtil {
 
         BufferedReader reader = new BufferedReader(new InputStreamReader(stream));
         try {
-            Files.writeString(srcPath, reader.lines().collect(Collectors.joining(seperator)));
+            Files.write(srcPath, reader.lines().collect(Collectors.joining(seperator)).getBytes(StandardCharsets.UTF_8));
         } catch (IOException e) {
             e.printStackTrace();
         }
